[gd_scene load_steps=6 format=3 uid="uid://wp6d880w6h6u"]

[ext_resource type="Script" path="res://start_menu.gd" id="1"]
[ext_resource type="Script" path="res://button_name.gd" id="2"]
[ext_resource type="Script" path="res://button_email_feedback.gd" id="3"]
[ext_resource type="Script" path="res://button_open_github.gd" id="4"]
[ext_resource type="Theme" uid="uid://cqlpsmjde8oae" path="res://wb_theme.tres" id="5"]

[node name="start_menu" type="CanvasLayer"]
script = ExtResource("1")

[node name="welcome_title" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -185.0
offset_top = 2.0
offset_right = 185.0
offset_bottom = 36.0
theme = ExtResource("5")
text = "All your base are belong to us"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="version_label" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -31.0
offset_right = 1280.0
offset_bottom = -1.0
theme = ExtResource("5")
text = "Version"

[node name="GridContainer" type="HFlowContainer" parent="."]
offset_left = 10.0
offset_top = 55.0
offset_right = 1270.0
offset_bottom = 665.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="button_daily_action" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("5")
text = "Daily Action"

[node name="button_open_github" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("5")
text = "GitHub"
script = ExtResource("4")

[node name="button_email_feedback" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("5")
text = "Feedback"
script = ExtResource("3")

[node name="button_name" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("5")
text = "Name"
script = ExtResource("2")

[node name="button_update_check" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("5")
text = "Check for Updates"

[node name="button_journal" type="Button" parent="GridContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("5")
text = "Journal"

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="GridContainer/button_open_github" to="GridContainer/button_open_github" method="_on_button_open_github_pressed"]
[connection signal="pressed" from="GridContainer/button_email_feedback" to="GridContainer/button_email_feedback" method="_on_button_email_feedback_pressed"]
[connection signal="pressed" from="GridContainer/button_name" to="GridContainer/button_name" method="_on_button_name_pressed"]
[connection signal="pressed" from="GridContainer/button_update_check" to="." method="_on_button_update_check_pressed"]
